--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,17 +1,18 @@
-<?php $currentPage = 'home';?>
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=divice-width, initial-scale=1.0">
 
-		<!-- Bootstrap icons -->
-		<link href='https://fonts.googleapis.com/css?family=Urbanist' rel='stylesheet'>
+		<!-- Google fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
 
-		<!-- Bootstrap -->
+		<!-- Bootstrap icons -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 		
-		<title>Modern interior design shop !</title>
+		<title>The Ultimate To-Do List Application !</title>
 	</head>
 	<body>	
 		<div id="root"></div>
